name:                Blog
version:             0.1.0.0
homepage:            https://gitlab.com/ibnuda/ibnuda.gitlab.io
license:             BSD3
license-file:        LICENSE
author:              Ibnu Daru Aji
maintainer:          ibnudaruaji@outlook.co.id
copyright:           2018 Ibnu Daru Aji
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  other-modules:       Lib.Prelude
                     , Lib.Types
                     , Lib.ReadWrite
                     , Lib.Generate
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.2
                     , blaze-html
                     , directory
                     , markdown
                     , regex-compat
                     , text
                     , time
                     , yaml
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable Blog
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Blog
                     , protolude >= 0.2
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite Blog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Blog
                     , protolude >= 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://gitlab.com/ibnuda/ibnuda.gitlab.io
