name:                Blog
version:             0.1.1.0
homepage:            https://gitlab.com/ibnuda/ibnuda.gitlab.io
license:             BSD3
license-file:        LICENSE
author:              Ibnu Daru Aji
maintainer:          ibnudaruaji@outlook.co.id
copyright:           2018 Ibnu Daru Aji
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  other-modules:       Lib.Prelude
                     , Lib.Types
                     , Lib.Regenerate
                     , Lib.Rewrite
                     , Lib.RSS
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.2
                     , HaXml
                     , blaze-html
                     , directory
                     , filepath
                     , cmark
                     , network-uri
                     , regex-compat
                     , text
                     , time
                     , yaml
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude
  ghc-options:         -Wall

executable Blog
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Blog
                     , protolude >= 0.2
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://gitlab.com/ibnuda/ibnuda.gitlab.io
